--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
 
 dependencies {
 
+    implementation 'com.squareup.picasso:picasso:+'
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    implementation 'com.google.android.gms:play-services-maps:18.0.1'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
